--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 asgiref==3.2.10
 Django==3.1.5
+joblib==1.0.0
+numpy==1.20.0
+pandas==1.2.1
+python-dateutil==2.8.1
 pytz==2020.1
+scikit-learn==0.24.1
+scipy==1.6.0
+six==1.15.0
+sklearn==0.0
 sqlparse==0.3.1
+threadpoolctl==2.1.0
