--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,15 @@ asgiref = "==3.2.10"
 pytz = "==2020.1"
 sqlparse = "==0.3.1"
 Django = "==3.1.5"
-pandas = "*"
-numpy = "*"
-sklearn = "*"
+pandas = "==1.2.1"
+numpy = "==1.20.0"
+sklearn = "==0.0"
+joblib = "==1.0.0"
+python-dateutil = "==2.8.1"
+scikit-learn = "==0.24.1"
+scipy = "==1.6.0"
+six = "==1.15.0"
+threadpoolctl = "==2.1.0"
 
 [dev-packages]
 
