--- a/Pipfile
+++ b/Pipfile
@@ -5,19 +5,22 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.2.10"
+joblib = "==1.0.0"
+numpy = "==1.20.0"
+pandas = "==1.2.1"
+python-dateutil = "==2.7.3"
 pytz = "==2020.1"
+scikit-learn = "==0.24.1"
+scipy = "==1.6.0"
+six = "==1.15.0"
+sklearn = "==0.0"
 sqlparse = "==0.3.1"
+threadpoolctl = "==2.1.0"
+django-cors-headers = "==3.7.0"
 Django = "==3.1.5"
-pandas = "*"
-numpy = "*"
-sklearn = "*"
-
 ChatterBot = "==1.0.2"
-django-cors-headers = "*"
-
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
-
+python_version = "3.8"
