--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==3.1.5
 joblib==1.0.0
 numpy==1.20.0
 pandas==1.2.1
-python-dateutil==2.8.1
+python-dateutil==2.7.3
 pytz==2020.1
 
 scikit-learn==0.24.1
@@ -12,6 +12,7 @@ six==1.15.0
 sklearn==0.0
 sqlparse==0.3.1
 threadpoolctl==2.1.0
+django-cors-headers==3.7.0
 
 Chatterbot==1.0.2
 
